--- a/demo/safariui.html
+++ b/demo/safariui.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Safari Liquid Interface Final</title>
+    <title>Safari Liquid - Global Touch Dismiss</title>
     <style>
         :root {
             --glass: rgba(255, 255, 255, 0.9);
@@ -12,191 +12,188 @@
             --fluid-ease: cubic-bezier(0.4, 0, 0.2, 1);
         }
 
-        body {
-            margin: 0; background: #000; height: 300vh;
-            font-family: -apple-system, system-ui; overflow-x: hidden;
+        body { margin: 0; background: #000; height: 300vh; font-family: -apple-system, system-ui; overflow-x: hidden; }
+
+        /* 全域遮罩：這是關鍵 */
+        #global-overlay {
+            position: fixed;
+            top: 0; left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: rgba(0,0,0,0);
+            z-index: 10000; /* 確保在所有東西之上 */
+            display: none; /* 平時隱藏 */
+            transition: background 0.4s;
+            /* 讓這層樓攔截所有觸控 */
+            touch-action: none;
+        }
+
+        /* 選單開啟時的狀態 */
+        .is-menu-open #global-overlay {
+            display: block;
+            background: rgba(0,0,0,0.4);
         }
 
         .safari-wrapper {
             position: fixed; bottom: 50px; left: 0; width: 100%;
-            display: flex; justify-content: center; align-items: center;
-            z-index: 9999;
+            display: flex; justify-content: center; align-items: center; 
+            z-index: 10001; /* 導覽列要在遮罩之上，才能點選單內的東西 */
         }
 
-        /* 統一高度的容器，防止上下錯位 */
         .liquid-pill {
-            position: relative;
-            width: 340px; height: 100px; /* 固定大容器高度 */
+            position: relative; width: 340px; height: 100px;
             transition: all 0.5s var(--fluid-ease);
             display: flex; align-items: center; justify-content: center;
         }
 
-        /* 母體背景膠囊 */
         .main-bg {
-            position: absolute;
-            width: 100%; height: 100%;
-            background: var(--glass);
-            backdrop-filter: blur(30px); -webkit-backdrop-filter: blur(30px);
-            border-radius: 35px;
-            box-shadow: 0 15px 45px rgba(0,0,0,0.4);
-            transition: all 0.5s var(--fluid-ease);
-            z-index: 1;
+            position: absolute; width: 100%; height: 100%;
+            background: var(--glass); backdrop-filter: blur(30px); -webkit-backdrop-filter: blur(30px);
+            border-radius: 35px; box-shadow: 0 15px 45px rgba(0,0,0,0.4);
+            transition: all 0.5s var(--fluid-ease); z-index: 1;
         }
 
-        /* 左側區塊 (Logo & 網址) */
         .left-zone {
-            position: absolute;
-            width: 310px; height: 44px;
-            top: 10px; /* 一般狀態下的高度 */
-            background: var(--inner);
-            border-radius: 22px;
-            display: flex; align-items: center; justify-content: center;
-            transition: all 0.5s var(--fluid-ease);
-            z-index: 2;
-            gap: 8px;
+            position: absolute; width: 310px; height: 44px; top: 10px;
+            background: var(--inner); border-radius: 22px;
+            display: flex; flex-direction: column; align-items: center;
+            transition: all 0.5s var(--fluid-ease); z-index: 10;
             overflow: hidden;
         }
 
-        .left-zone span { color: #000; font-weight: 500; font-size: 15px; transition: 0.3s; }
+        .left-header { height: 44px; width: 100%; display: flex; align-items: center; justify-content: center; gap: 8px; flex-shrink: 0; }
+        .left-header span { color: #000; font-weight: 500; font-size: 15px; }
 
-        /* 右側區塊 (按鈕列) */
+        .menu-content {
+            width: 100%; opacity: 0; visibility: hidden;
+            display: flex; flex-direction: column; gap: 18px;
+            padding: 10px 0; transition: 0.3s;
+        }
+        .menu-item { display: flex; align-items: center; gap: 12px; padding: 0 20px; color: #000; font-size: 16px; white-space: nowrap; }
+
         .right-zone {
-            position: absolute;
-            width: 310px; height: 40px;
-            bottom: 6px; /* 一般狀態下的高度 */
+            position: absolute; width: 310px; height: 40px; bottom: 6px;
             display: flex; justify-content: space-around; align-items: center;
-            transition: all 0.5s var(--fluid-ease);
-            z-index: 2;
+            transition: all 0.5s var(--fluid-ease); z-index: 2;
         }
+        .icon { color: var(--accent); font-size: 22px; }
 
-        .icon { 
-            color: var(--accent); font-size: 22px; cursor: pointer; 
-            transition: all 0.5s var(--fluid-ease);
-        }
-
-        /* ================= 狀態轉換 ================= */
-
-        /* 1. 簡化狀態 (Simplified) - 分裂 */
-        .state-simplified .main-bg {
-            opacity: 0; transform: scale(0.8);
-        }
-
-        /* 左區塊移動：從上方中心移到左側中心 */
+        /* --- 狀態變化 --- */
+        .state-simplified .main-bg { opacity: 0; transform: scale(0.8); }
         .state-simplified .left-zone {
-            width: 54px; height: 54px;
-            background: var(--glass);
-            border-radius: 50%;
-            top: 23px; /* 調整至與右區塊水平居中 */
-            transform: translateX(-120px);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-            backdrop-filter: blur(30px);
+            width: 56px; height: 56px; background: var(--glass);
+            border-radius: 28px; top: 22px; transform: translateX(-120px);
+            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
         }
-        .state-simplified .left-zone span { opacity: 0; width: 0; }
-
-        /* 右區塊移動：從下方中心移到右側中心 */
+        .state-simplified .left-header span { opacity: 0; width: 0; }
         .state-simplified .right-zone {
-            width: 220px; height: 54px;
-            background: var(--glass);
-            border-radius: 27px;
-            bottom: 23px; /* 與左區塊保持同一水平線 */
-            transform: translateX(35px);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-            backdrop-filter: blur(30px);
-            padding: 0 10px;
+            width: 220px; height: 56px; background: var(--glass);
+            border-radius: 28px; bottom: 22px; transform: translateX(35px);
         }
 
-        /* 2. 縮小狀態 (Compact) - 凝聚 */
-        .state-compact .main-bg {
-            width: 140px; height: 44px; border-radius: 22px;
+        .is-menu-open .left-zone {
+            width: 200px; height: 220px; 
+            border-radius: 28px; background: white;
+            transform: translateX(-60px) translateY(-150px);
+            box-shadow: 0 25px 50px rgba(0,0,0,0.4);
         }
-        .state-compact .left-zone {
-            width: 140px; height: 44px; top: 28px; background: transparent;
-        }
-        .state-compact .left-zone img { display: none; }
-        .state-compact .left-zone span { font-size: 14px; font-weight: 600; }
-        .state-compact .right-zone { 
-            opacity: 0; transform: scale(0.5); pointer-events: none;
-        }
+        .is-menu-open .left-header { border-bottom: 1px solid #f0f0f0; height: 52px; }
+        .is-menu-open .left-header span { opacity: 1; width: auto; font-size: 14px; }
+        .is-menu-open .menu-content { opacity: 1; visibility: visible; }
 
-        #hint {
-            position: fixed; top: 30px; color: #888; width: 100%; text-align: center;
-            font-size: 13px; line-height: 1.6;
-        }
+        .state-compact .main-bg { width: 140px; height: 44px; border-radius: 22px; }
+        .state-compact .left-zone { width: 140px; height: 44px; top: 28px; background: transparent; transform: translateX(0); }
+        .state-compact .left-header span { font-size: 14px; font-weight: 600; opacity: 1; width: auto; }
+        .state-compact .right-zone { opacity: 0; transform: scale(0.5); pointer-events: none; }
+
     </style>
 </head>
-<body>
+<body id="body-tag">
 
-    <div id="hint">
-        <b>[ 液態玻璃完美版測試 ]</b><br>
-        向右滑動底欄 ➔ <b>分裂簡化</b> (水平對齊無錯位)<br>
-        向上滑動網頁 ➔ <b>凝聚縮小</b> (五鍵消失回歸中心)<br>
-        五個功能按鈕：後退、前進、分享、書籤、分頁
-    </div>
+    <div id="global-overlay"></div>
 
     <div class="safari-wrapper" id="root">
         <div class="liquid-pill" id="pill">
             <div class="main-bg"></div>
-
-            <div class="left-zone">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" width="18">
-                <span>apple.com</span>
+            <div class="left-zone" id="logo-btn">
+                <div class="left-header">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" width="18">
+                    <span>apple.com</span>
+                </div>
+                <div class="menu-content">
+                    <div class="menu-item">❐ 複製連結</div>
+                    <div class="menu-item">↻ 重新載入</div>
+                    <div class="menu-item">📖 儲存書籤</div>
+                    <div class="menu-item">⇪ 分享網頁</div>
+                </div>
             </div>
-
             <div class="right-zone">
-                <div class="icon">＜</div>
-                <div class="icon">＞</div>
-                <div class="icon">⇪</div>
-                <div class="icon">📖</div>
-                <div class="icon">❐</div>
+                <div class="icon">＜</div><div class="icon">＞</div><div class="icon">⇪</div><div class="icon">📖</div><div class="icon">❐</div>
             </div>
         </div>
     </div>
 
     <script>
-        const root = document.getElementById('root');
+        const root = document.getElementById('body-tag');
+        const pill = document.getElementById('pill');
+        const logoBtn = document.getElementById('logo-btn');
+        const overlay = document.getElementById('global-overlay');
+        
         let startX = 0;
         let currentState = 'normal';
-        let prevState = 'normal';
 
-        // 滾動偵測
-        window.addEventListener('scroll', () => {
-            if (window.scrollY > 50) {
-                if (currentState !== 'compact') {
-                    prevState = currentState;
-                    currentState = 'compact';
-                    root.className = 'safari-wrapper state-compact';
-                }
-            } else {
-                if (currentState === 'compact') {
-                    currentState = prevState;
-                    root.className = 'safari-wrapper' + (currentState === 'simplified' ? ' state-simplified' : '');
-                }
+        // 點擊 Logo 開啟
+        logoBtn.addEventListener('click', (e) => {
+            if (currentState === 'simplified') {
+                root.classList.add('is-menu-open');
+                e.stopPropagation();
             }
         });
 
-        // 滑動偵測 (核心)
-        document.getElementById('pill').addEventListener('touchstart', e => startX = e.touches[0].clientX);
-        document.getElementById('pill').addEventListener('touchend', e => {
-            const diff = e.changedTouches[0].clientX - startX;
-            if (diff > 40 && currentState === 'normal') {
-                currentState = 'simplified';
-                root.className = 'safari-wrapper state-simplified';
-            } else if (diff < -40 && currentState === 'simplified') {
-                currentState = 'normal';
-                root.className = 'safari-wrapper';
-            }
-        });
+        // 重點：全螢幕攔截。無論是 touch 還是 click，只要在 overlay 上就關閉
+        const closeMenu = (e) => {
+            root.classList.remove('is-menu-open');
+            e.preventDefault(); // 防止穿透點擊到網頁
+        };
         
-        // 電腦版模擬
-        document.getElementById('pill').addEventListener('mousedown', e => startX = e.clientX);
-        document.getElementById('pill').addEventListener('mouseup', e => {
-            const diff = e.clientX - startX;
-            if (diff > 40 && currentState === 'normal') {
-                currentState = 'simplified';
-                root.className = 'safari-wrapper state-simplified';
-            } else if (diff < -40 && currentState === 'simplified') {
+        overlay.addEventListener('touchstart', closeMenu, { passive: false });
+        overlay.addEventListener('click', closeMenu);
+
+        // 滾動與手勢
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 40) {
+                if (currentState !== 'compact') {
+                    currentState = 'compact';
+                    root.classList.remove('is-menu-open');
+                    document.getElementById('root').className = 'safari-wrapper state-compact';
+                }
+            } else if (window.scrollY <= 40 && currentState === 'compact') {
                 currentState = 'normal';
-                root.className = 'safari-wrapper';
+                document.getElementById('root').className = 'safari-wrapper';
+            }
+        });
+
+        pill.addEventListener('touchstart', e => {
+            if (root.classList.contains('is-menu-open')) return;
+            startX = e.touches[0].clientX;
+        });
+
+        pill.addEventListener('touchmove', e => {
+            if (currentState !== 'compact' && !root.classList.contains('is-menu-open')) {
+                e.preventDefault(); // 阻擋誤觸滑動
+            }
+        }, { passive: false });
+
+        pill.addEventListener('touchend', e => {
+            const diff = e.changedTouches[0].clientX - startX;
+            if (Math.abs(diff) > 40) {
+                if (diff > 40 && currentState === 'normal') {
+                    currentState = 'simplified';
+                    document.getElementById('root').className = 'safari-wrapper state-simplified';
+                } else if (diff < -40 && currentState === 'simplified') {
+                    currentState = 'normal';
+                    document.getElementById('root').className = 'safari-wrapper';
+                }
             }
         });
     </script>
